--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "axios": "^0.19.2",
     "electron-html-to": "^2.6.0",
-    "electron-packager": "^14.2.1"
+    "electron-packager": "^14.2.1",
+    "minimist": "^1.2.5"
   },
   "devDependencies": {
     "electron": "^8.2.4"
